@@ -1,4 +1,5 @@
 0.08
+ - Update Module::Install to 1.19 version.
 
 0.07 2015-09-27T17:57:34+02:00
  - Improve EXAMPLE5 section in doc.
